# nerdouts

./: .gitignore  README.md  bootstrap_exercises.py  coach.py  config.json  config.py  database.py  exercises.json  init_db.py  models.py  music.py  pyproject.toml  requirements.txt  setup.py  workout.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
nerdouts/: cli.py  config.py  database.py  exercise_vars.py  exercises.json  generate_dynamic_workout.py  generate_exercise_names.py  generate_static_workout.py  init_db.py  models.py  music.py  music_player.py  run_workout.py  rust_exercises.json  secrets.yaml.template  speech.py  spotify.py  sql_alchemy_work.ipynb  static_workouts.py  test_argparse.py  test_dynamic_workout_generator.py  test_exercise_category.py  test_exercises.json  test_load_exercise.ipynb  test_static_workout_generator.py  utils.py  web.py  workout_runner.py
nerdouts/static/css/: styles.css
nerdouts/static/js/: workout_utils.js
nerdouts/templates/: base.html  create_static_workout.html  dynamic_workout.html  home.html  static_workout.html  workout.html
